--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,5 @@
 channels:
   - defaults
 dependencies:
+  - python=3.10
   - pandas=1.5.3 # https://anaconda.org/anaconda/pandas/files?page=3&version=1.5.3
