--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -47,3 +47,11 @@ jobs:
         report_paths: '**/junit.xml'
         detailed_summary: true
         include_passed: true
+
+    - name: Upload Test Report
+      uses: actions/upload-artifact@v3
+      if: always() # always run even if the previous step fails
+      with:
+        name: junit-test-results
+        path: '**/junit.xml'
+        retention-days: 7
